--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  max-width: 30rem;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
 
@@ -20,8 +21,9 @@ a,
 }
 h1 {
   font-weight: 500;
-  font-size: 2.6rem;
+  font-size: 2rem;
   top: -10px;
+  text-align: center;
 }
 @media (hover: hover) {
   a:hover {
