--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,7 @@
   max-width: 30rem;
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 1rem;
 
   font-weight: normal;
   place-items: center;
